--- a/public/__forms.html
+++ b/public/__forms.html
@@ -29,7 +29,7 @@
         <textarea
           id="message"
           name="message"
-          rows="{5}"
+          rows="5"
           required
           placeholder="Your message here..."
         ></textarea>
@@ -75,7 +75,7 @@
         <textarea
           id="message"
           name="message"
-          rows="{5}"
+          rows="5"
           required
           placeholder="Your message here..."
         ></textarea>
